# RayTracing_OpenCL

./: CMakeLists.txt  README.md  image_raytracing.ppm  main.cpp  opencl_kernel.cl
CLOperator/: CLOperator.cpp  CLOperator.h
ImgWindow/: ImgWindow.cpp  ImgWindow.h  ImgWindow.ui  ImgWindowWorker.cpp  ImgWindowWorker.h  ui_ImgWindow.h
Scene/: Scene.cpp  Scene.h
src/: CMakeLists.txt  main.cpp  opencl_kernel.cl
src/CLOperator/: CLOperator.cpp  CLOperator.h
src/ImgWindow/: ImgWindow.cpp  ImgWindow.h  ImgWindow.ui  ImgWindowWorker.cpp  ImgWindowWorker.h
src/Scene/: Scene.cpp  Scene.h  common_struct.h
src/opencl/: opencl_kernel.cl
